--- a/src/app/components/navegacion/navegacion.component.html
+++ b/src/app/components/navegacion/navegacion.component.html
@@ -7,7 +7,7 @@
             <a class="nav-link active" aria-current="page" routerLink="/contacto">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Sobre nosotros</a>
+            <a class="nav-link active" aria-current="page" routerLink="/sobre-nosotros">Sobre nosotros</a>
           </li>
           <li class="nav-item sesion">
             <a class="nav-link active" aria-current="page" href="#">Cerrar Sesion</a>
