--- a/src/app/pages/pageaboutus/pageaboutus.component.html
+++ b/src/app/pages/pageaboutus/pageaboutus.component.html
@@ -1,11 +1,17 @@
 <navegacion></navegacion>
 
 <div class="container-fluid fondo">
+    <div class="row">
     <div class="col-6">
-        <div class="text-center"><img src="/assets/logopwso.png" alt="" height="200px" width="auto" class=" mt-5 mb-5"></div>
-        <p class="h1 bold text-center">PaginasWebStore</p>
-        <p class="p-5 d-flex justify-content">PaginasWebStore es un empredimiento creado para poder ayudar a cada emprendimiento, negocio, servicio o rubro a darle mayor exposicion e introducirlo a la epoca digital que atravesamos. Con nuesto asesoramiento podemos crear una increible pagina, que represente todo lo que quiera transmitir sobre su producto y/o servicio,</p>
+        <div class="text-center "><img src="/assets/logopwso.png" alt="" height="200px" width="auto" class=" imgempre"></div>
+        <p class=" d-flex justify-content">PaginasWebStore es un empredimiento creado para poder ayudar a cada emprendimiento, negocio, servicio o rubro a darle mayor exposicion e introducirlo a la epoca digital que atravesamos. Con nuesto asesoramiento podemos crear una increible pagina, que represente todo lo que quiera transmitir sobre su producto y/o servicio. Esperamos poder ser justo lo que necesitaban para iniciar una nueva etapa, sin otro particular dejo mi correo y mis redes donde pueden seguir la trayectoria de mis trabajos.</p>
     </div>
 
-    <div class="col-6"></div>
+    <div class="col-6 text-center botonesaboutus">
+        <a href="mailto:lucas25monzon@gmail.com" target="_blank">Click aqui para contactarme via email</a>
+        <a href="https://www.linkedin.com/in/lmonzon/" target="_blank">Click aqui para contactarme via Linkedin</a>
+        <a href="https://www.instagram.com/lcmonzon/" target="_blank">Click aqui para contactarme via Instagram</a>
+        <a href="https://walink.co/85df05" target="_blank">Click aqui para contactarme via WhatsApp</a>
+    </div>
+    </div>
 </div>
